# syren

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  justfile  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/syren-cli/: Cargo.toml
crates/syren-cli/src/: filter.rs  main.rs
crates/syren-cli/tests/: cli.rs
crates/syren-common/: Cargo.toml  build.rs
crates/syren-common/src/: ebpf.rs  errno.rs  event.rs  lib.rs  mem.rs  signal.rs
crates/syren-decode/: Cargo.toml
crates/syren-decode/src/: consts.rs  flags.rs  lib.rs  render.rs
crates/syren-ebpf/: Cargo.toml  rust-toolchain.toml
crates/syren-ebpf/.cargo/: config.toml
crates/syren-ebpf/src/: main.rs
crates/syren-gen/: Cargo.toml
crates/syren-gen/src/: category.rs  codegen.rs  lib.rs  meta.rs  table.rs
crates/syren-output/: Cargo.toml
crates/syren-output/src/: json.rs  lib.rs  summary.rs  text.rs
crates/syren-trace/: Cargo.toml
crates/syren-trace/examples/: overhead.rs  profile.rs
crates/syren-trace/src/: ebpf.rs  lib.rs  ptrace.rs
crates/syren-trace/tests/: spawn.rs
