[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/syren-ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["The syren authors"]
repository = "https://github.com/uselessgoddess/syren"
description = "A modern, eBPF-powered observability tool for syscalls — a strace alternative"
keywords = ["strace", "ebpf", "syscall", "tracing"]
categories = ["development-tools::debugging", "command-line-utilities"]

[workspace.dependencies]
syren-gen = { path = "crates/syren-gen", version = "0.1.0" }
syren-trace = { path = "crates/syren-trace", version = "0.1.0" }
syren-common = { path = "crates/syren-common", version = "0.1.0" }
syren-decode = { path = "crates/syren-decode", version = "0.1.0" }
syren-output = { path = "crates/syren-output", version = "0.1.0" }

aya = { version = "0.13" }

# errors
anyhow = "1.0"
thiserror = "2.0"

# cli
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ptrace
nix = { version = "0.29", default-features = false, features = [
    "ptrace",
    "process",
    "signal",
    "fs",
] }
libc = "0.2"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# testing
assert_cmd = "2.0"
predicates = "3.1"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.micro]
inherits = "release"
codegen-units = 1
opt-level = 3
lto = "thin"
strip = true

[profile.nano]
inherits = "micro"
opt-level = "z"
lto = "fat"
panic = "abort"
