[package]
name = "syren-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "syren command-line interface — a modern, strace-compatible syscall tracer"

[lints]
workspace = true

[[bin]]
name = "syren"
path = "src/main.rs"

[features]
default = []
ebpf = ["syren-trace/ebpf"]

[dependencies]
syren-common = { workspace = true }
syren-trace = { workspace = true }
syren-decode = { workspace = true }
syren-output = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
