[package]
name = "syren-decode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Metadata-driven syscall argument decoding for syren"

[lints]
workspace = true

[dependencies]
syren-common = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
