[package]
name = "syren-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Output formatters (text, NDJSON, summary) for syren"

[lints]
workspace = true

[dependencies]
syren-common = { workspace = true }
syren-decode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
