[package]
name = "syren-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tracing backends for syren"

[lints]
workspace = true

[dependencies]
syren-common = { workspace = true, features = ["std"] }
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

aya = { workspace = true, optional = true }

[features]
default = []
ebpf = ["dep:aya", "syren-common/ebpf"]

[dev-dependencies]
aya-obj = "0.2"
